# finbot

./: LICENSE  Makefile  README.md
backend/: .env.example  pyproject.toml
backend/scripts/: ingest_all.py  run_evals.py  test_connection.py  test_guardrails.py  test_rag.py  test_rbac.py  test_router.py
backend/src/: config.py
backend/src/api/: demo_users.py  dependencies.py  main.py
backend/src/api/routes/: admin.py  auth.py  chat.py
backend/src/evaluation/: ground_truth.json  ragas_runner.py
backend/src/evaluation/results/: ablation_results.json
backend/src/guardrails/: input_guards.py  output_guards.py
backend/src/ingestion/: chunker.py  embedder.py  ingest_pipeline.py  parser.py
backend/src/rag/: chain.py  prompts.py
backend/src/retrieval/: qdrant_store.py  rbac.py  retriever.py
backend/src/routing/: role_intersect.py  semantic_router.py
docs/: ragas-results.md
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
